# svelo

./: .gitignore  AGENTS.md  CHANGES_SUMMARY.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  REVIEWER_GUIDE.md  ROADMAP.md  TESTING_REPORT.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  educational_contribution.md  feature_request.md
.github/workflows/: bandit.yml  build.yml  codeql.yml  coverage.yml  lint.yml  tests.yml
src/svelo/: cli.py  decoders.py  glossary.py  utils.py
tests/: test_cli.py  test_decoders.py  test_utils.py
