[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "svelo-decoder"
version = "0.1.0"
description = "Lightweight CLI that tries common decoders on a string"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
  {name = "svelo"}
]

dependencies = []

[project.optional-dependencies]
dev = [
  "pytest>=7.0"
]

[project.scripts]
svelo = "svelo.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
